# qstuff

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt
.github/workflows/: cmake.yml  codeql-analysis.yml  dpkg.yml
debian/: changelog  control  copyright
src/: CMakeLists.txt  chartwidget.cpp  chartwidget.h  chartwidget.ui  countschart.cpp  countschart.h  editfilterwidget.cpp  editfilterwidget.h  editfilterwidget.ui  filterdelegate.cpp  filterdelegate.h  filterexpression.cpp  filterexpression.h  filterlistwidget.cpp  filterlistwidget.h  filterlistwidget.ui  filtermodel.cpp  filtermodel.h  keyfilterproxymodel.cpp  keyfilterproxymodel.h  logmodel.cpp  logmodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  manageviewsdialog.cpp  manageviewsdialog.h  manageviewsdialog.ui  percentbardelegate.cpp  queryvalidator.cpp  queryvalidator.h  savedview.cpp  savedview.h  savedviewsmodel.cpp  savedviewsmodel.h  saveviewdialog.cpp  saveviewdialog.h  saveviewdialog.ui  settingsdialog.cpp  (+14 more)
